main item section refactoring

--- a/index.html
+++ b/index.html
@@ -57,16 +57,10 @@
           <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
         </li>        
       </ul>
     </div>
@@ -311,67 +305,10 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
-      <div class="w-100">
-        <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Microverse</h3>
-            <div class="subheading mb-3">Diploma</div>
-            <p>Remote Full Stack Web Development Program, Full Time</p>
-            <p>Handling of 1600+ hours mastering algorithms, data structures, and full-stack development while simultaneously developing projects with Ruby, Rails, JavaScript, React, and Redux</p>
-            <p>Developing skills in remote pair-programming using GitHub, industry-standard Gitflow, and daily standups to communicate and collaborate with international remote developers</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">October 2019 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Tecnológico Nacional De México (ITL)</h3>
-            <div class="subheading mb-3">Computer Systems Engineer</div>
-            <p>ISC (Degree in process)</p>
-            <p>Implemented an Android mobile test server with open source software and research about the work environment, functionalities, and tools to handle, aside with a post-implementation test automation suite</p>
-            <p>Outstanding performance testimony on Final Exam for Graduate Studies</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2011 - June 2017</span>
-          </div>
-        </div>
-
-		    <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">TECNM</h3>
-            <div class="subheading mb-3">Module for Entrepreneurship and Management</div>
-            <p>Participated in the ‘Gamification - Hack Bajío’ contest realized by ITESM, collaborating on creative and solution processes</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September - November 2015</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Consciencia Consultores</h3>
-            <div class="subheading mb-3">Diploma</div>            
-            <p>Neuro-Linguistic Programming Master Practitioner Certificate</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">February - December 2018</span>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <hr class="m-0">
-
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Besides my career development, I enjoy spending my time on some other activities and projects. Investigation and reading about diverse topics like general culture, science, and self-improvement are some of my preferred activities in my free time. I like to practice some sports like jogging, basketball and anaerobic exercise</p>
+        <p>Besides my career development, I enjoy spending my time on a variety of activities and activities and projects, such as reading about topics as diverse as general culture, science, and self-improvement. I like to practice some sports like jogging, basketball and anaerobic exercise</p>
         <p class="mb-0">In entertainment, I follow a number of comedy and culture genre movies and television shows, I am an aspiring meditator, and I spend the rest of my free time exploring new web technologies</p>
       </div>
     </section>
