--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
-        </li>        
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -295,7 +298,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a class="nav-link js-scroll-trigger" href="https://docs.google.com/document/d/1IXDrWeU0iApa1xaqfxj_RwQClak7VWvnZVeZDwfzm1g/edit">You can find it here</a>
+            <h3 class="mb-0"><a class="nav-link js-scroll-trigger" href="https://docs.google.com/document/d/1IXDrWeU0iApa1xaqfxj_RwQClak7VWvnZVeZDwfzm1g/edit" target = "_blank">You can find it here</a>
             </h3>
           </div>
         </div>
