main item section refactoring

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
+          <a class="nav-link js-scroll-trigger" href="#link_resume">Resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
@@ -292,7 +292,7 @@
 
     <hr class="m-0">    
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="resume">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="link_resume">
       <div class="w-100">
         <h2 class="mb-5">Resume</h2>
 
