project descriptions on transitions,  resume sections smaller and Javascript added on skills

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
               <p>Little Red Ridding Hood</p>
               <div class="summary-stack">
                 <ul class="item1">
+                  <li>JavaScript</li>
                   <li>ES6</li>
                   <li>Phaser 3</li>
                   <li>Webpack 4</li>
@@ -292,7 +293,7 @@
 
     <hr class="m-0">    
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="link_resume">
+    <section class="resume-section resume-link px-3 py-0 p-lg-5 d-flex align-items-center" id="link_resume">
       <div class="w-100">
         <h2 class="mb-5">Resume</h2>
 
