added project to portfolio list

--- a/index.html
+++ b/index.html
@@ -168,19 +168,19 @@
         </div>
         <div class="team-area">
           <div class="single-team">
-            <img src="img/mockups/trucking.jpg" alt="Trucking">
+            <img src="img/mockups/tasktracker.png" alt="Tasktracker">
             <div class="team-text">
-              <h2>Trucking</h2>
-              <p>Kilometer's per truck</p>
+              <h2>Tasktracker</h2>
+              <p>Register and follow your todos</p>
               <div class="summary-stack">
                 <ul class="item1">
                   <li>Rails</li>
-                  <li>PostgreSQL</li>
+                  <li>Netlify</li>
                   <li>Heroku</li>
                 </ul>
                 <p class="item2">
-                  <a href="https://github.com/ricardovaltierra/kilometers-per-truck" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://truckinglat.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                  <a href="https://github.com/ricardovaltierra/task-track-app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://steptracking.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
