Fixed portfolio item description

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <img src="img/mockups/tasktracker.png" alt="Tasktracker">
             <div class="team-text">
               <h2>Tasktracker</h2>
-              <p>Register and follow your todos</p>
+              <p>Follow your todo's progress</p>
               <div class="summary-stack">
                 <ul class="item1">
                   <li>Rails</li>
