Porfolio item description update
Project stack description updated

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
               <div class="summary-stack">
                 <ul class="item1">
                   <li>Rails</li>
-                  <li>Netlify</li>
-                  <li>Heroku</li>
+                  <li>React</li>
+                  <li>Redux</li>
                 </ul>
                 <p class="item2">
                   <a href="https://github.com/ricardovaltierra/task-track-app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
