tasktrack portfolio item updated

--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
         </div>
         <div class="team-area">
           <div class="single-team">
-            <img src="img/mockups/tasktracker.png" alt="Tasktracker">
+            <img src="img/mockups/tasktracker.png" alt="Tasktrack">
             <div class="team-text">
-              <h2>Tasktracker</h2>
+              <h2>Tasktrack</h2>
               <p>Follow your todo's progress</p>
               <div class="summary-stack">
                 <ul class="item1">
@@ -180,7 +180,7 @@
                 </ul>
                 <p class="item2">
                   <a href="https://github.com/ricardovaltierra/task-track-app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://steptracking.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                  <a href="https://tasktrack.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
