Fix 're-pair programming' from professional section

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>            
-            Remote re-pair programming</li>                      
+            Remote pair programming</li>                      
           <li>
             <i class="fa-li fa fa-check"></i>            
             Teamwork</li>
