meta tag og description update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="linkedin:image" content="https://raw.githubusercontent.com/ricardovaltierra/ricardovaltierra.github.io/master/img/preview.png">
   <meta property="og:url" content="https://ricardovaltierra.me">
   <meta name="linkedin:card" content="summary">
-  <meta property="og:description" content="Ricardo Valtierra's Personal Portfolio">
+  <meta property="og:description" content="Ricardo Valtierra's personal portfolio">
   <meta property="og:title" content="Personal Portfolio"/>
   <meta name='date' content='Aug. 11, 2020'>
   <meta name="author" content="Ricardo Valtierra">
