added To-Do-It project to portfolio, re-ordering of elements

--- a/index.html
+++ b/index.html
@@ -111,26 +111,7 @@
         <h2 class="mb-5">Portfolio</h2>
         <div class="team-area">
           <div class="single-team">
-            <img src="img/mockups/rpg.png" alt="RPG Game">
-            <div class="team-text">
-              <h2>RPG Game</h2>
-              <p>Little Red Ridding Hood</p>
-              <div class="summary-stack">
-                <ul class="item1">
-                  <li>JavaScript</li>
-                  <li>ES6</li>
-                  <li>Phaser 3</li>
-                  <li>Webpack 4</li>
-                </ul>
-                <p class="item2">
-                  <a href="https://github.com/ricardovaltierra/rpg-game" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://little-red-ridding-hood.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="single-team">
-            <img src="img/mockups/weather.png" alt="Weather App">
+            <img src="img/mockups/weather_.png" alt="Weather App">
             <div class="team-text">
               <h2>Weather App</h2>
               <p>Mobile first on on F° || C°</p>
@@ -164,9 +145,7 @@
                 </p>
               </div>
             </div>
-          </div>          
-        </div>
-        <div class="team-area">
+          </div>
           <div class="single-team">
             <img src="img/mockups/tasktracker.png" alt="Tasktrack">
             <div class="team-text">
@@ -184,7 +163,9 @@
                 </p>
               </div>
             </div>
-          </div>          
+          </div>
+        </div>
+        <div class="team-area">
           <div class="single-team">
             <img src="img/mockups/news-week.jpg" alt="Newsweek page">
             <div class="team-text">
@@ -199,6 +180,43 @@
                 <p class="item2">
                   <a href="https://github.com/ricardovaltierra/bootstrap" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
                   <a href="https://newsweek-responsive.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="single-team">
+            <img src="img/mockups/todos.png" alt="To-Do-It">
+            <div class="team-text">
+              <h2>To-Do-It</h2>
+              <p>Manage your TODOS</p>
+              <div class="summary-stack">
+                <ul class="item1">
+                  <li>ES6</li>
+                  <li>Bulma</li>
+                  <li>CSS</li>
+                </ul>
+                <p class="item2">
+                  <a href="https://github.com/redacuve/to-do-js" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://raw.githack.com/redacuve/to-do-js/todo-list/dist/index.html" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="single-team">
+            <img src="img/mockups/rpg.png" alt="RPG Game">
+            <div class="team-text">
+              <h2>RPG Game</h2>
+              <p>Little Red Ridding Hood</p>
+              <div class="summary-stack">
+                <ul class="item1">
+                  <li>JavaScript</li>
+                  <li>ES6</li>
+                  <li>Phaser 3</li>
+                  <li>Webpack 4</li>
+                </ul>
+                <p class="item2">
+                  <a href="https://github.com/ricardovaltierra/rpg-game" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://little-red-ridding-hood.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
