Weather app 'team-text' p fixed

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <img src="img/mockups/weather_.png" alt="Weather App">
             <div class="team-text">
               <h2>Weather App</h2>
-              <p>Mobile first on on F° || C°</p>
+              <p>Mobile first on F° || C°</p>
               <div class="summary-stack">
                 <ul class="item1">
                   <li>AerisWeather</li>
