Updates skills and description information

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="linkedin:card" content="summary">
   <meta property="og:description" content="Ricardo Valtierra's personal portfolio">
   <meta property="og:title" content="Personal Portfolio"/>
-  <meta name='date' content='Aug. 11, 2020'>
+  <meta name='date' content='Jul 21, 2021'>
   <meta name="author" content="Ricardo Valtierra">
 
   <title>Ricardo Valtierra | Portfolio</title>
@@ -82,7 +82,7 @@
           <a href="mailto:ricardo_valtierra@outlook.com">ricardo_valtierra@outlook.com</a>
         </div>
         <p class="lead mb-5">
-          Experienced on app building and full deployment for mobile and desktop. Specialized on the JS - ES6 | React - Redux | Rails - Ruby stack, API oriented with a SaaS approach.
+          Experienced on app designing, building and testing for mobile and desktop. Specialized on the Ruby / Ruby on Rails | ES6 / React stack with a SaaS approach.
       </p>
         <div class="social-icons">
           <a href="http://www.linkedin.com/in/ricardovaltierra" target = "_blank">
@@ -231,8 +231,30 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
+        <div class="subheading mb-3">Back-End</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">            
+            <i class="icon-ruby"></i> 
+          </li>
+          <li class="list-inline-item">
+            <i class="icon-ruby-on-rails"></i>
+          </li>                                  
+          <li class="list-inline-item">            
+            <i class="icon-postgres-alt"></i>
+          </li>
+          <li class="list-inline-item">            
+            <i class="icon-database"></i>
+          </li>
+          <li class="list-inline-item">            
+            <i class="icon-mysql"></i>
+          </li>
+        </ul>
+
         <div class="subheading mb-3">Front-End</div>
         <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <i class="fab fa-js-square"></i>
+          </li>
           <li class="list-inline-item">
             <i class="fab fa-react"></i>
           </li>          
@@ -247,31 +269,6 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-css3-alt"></i>
-          </li>          
-        </ul>
-
-        <div class="subheading mb-3">Back-End</div>
-        <ul class="list-inline dev-icons">                    
-          <li class="list-inline-item">
-            <i class="fab fa-java"></i>
-          </li>
-          <li class="list-inline-item">            
-            <i class="icon-ruby"></i> 
-          </li>
-          <li class="list-inline-item">
-            <i class="icon-ruby-on-rails"></i>
-          </li>                                  
-          <li class="list-inline-item">            
-            <i class="icon-postgres-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">            
-            <i class="icon-database"></i>
-          </li>
-          <li class="list-inline-item">            
-            <i class="icon-mysql"></i>
           </li>          
         </ul>
 
