Delete old images & add new ones, adding new content items

--- a/index.html
+++ b/index.html
@@ -111,24 +111,6 @@
         <h2 class="mb-5">Portfolio</h2>
         <div class="team-area">
           <div class="single-team">
-            <img src="img/mockups/weather_.png" alt="Weather App">
-            <div class="team-text">
-              <h2>Weather App</h2>
-              <p>Mobile first on F° || C°</p>
-              <div class="summary-stack">
-                <ul class="item1">
-                  <li>AerisWeather</li>
-                  <li>Algolia</li>
-                  <li>Bulma</li>
-                </ul>
-                <p class="item2">
-                  <a href="https://github.com/ricardovaltierra/weather-app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://weather-query.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="single-team">
             <img src="img/mockups/restaurant.png" alt="Restaurant Page">
             <div class="team-text">
               <h2>Restaurant</h2>
@@ -136,7 +118,7 @@
               <div class="summary-stack">
                 <ul class="item1">
                   <li>ES6</li>
-                  <li>Webpack 4</li>
+                  <li>Webpack</li>
                   <li>CSS</li>
                 </ul>
                 <p class="item2">
@@ -164,8 +146,44 @@
               </div>
             </div>
           </div>
+          <div class="single-team">
+            <img src="img/mockups/alpha_blog.png" alt="Alpha Blog">
+            <div class="team-text">
+              <h2>Alpha Blog</h2>
+              <p>Rails site for blog posting</p>
+              <div class="summary-stack">
+                <ul class="item1">
+                  <li>Rails 6</li>
+                  <li>PostgreSQL</li>
+                  <li>Heroku</li>
+                </ul>
+                <p class="item2">
+                  <a href="https://github.com/ricardovaltierra/alpha_blog" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://analphablog.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="team-area">
+          <div class="single-team">
+            <img src="img/mockups/sample_app.jpg" alt="Rails Sample App">
+            <div class="team-text">
+              <h2>Sample App</h2>
+              <p>A practice from M.H.'s book</p>
+              <div class="summary-stack">
+                <ul class="item1">
+                  <li>Rails 7</li>
+                  <li>Hotwire</li>
+                  <li>AWS S3</li>
+                </ul>
+                <p class="item2">
+                  <a href="https://github.com/ricardovaltierra/sample_app" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
+                  <a href="https://sample-app-rv.herokuapp.com/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>
+                </p>
+              </div>
+            </div>
+          </div>
           <div class="single-team">
             <img src="img/mockups/news-week.jpg" alt="Newsweek page">
             <div class="team-text">
@@ -198,25 +216,6 @@
                 <p class="item2">
                   <a href="https://github.com/redacuve/to-do-js" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
                   <a href="https://raw.githack.com/redacuve/to-do-js/todo-list/dist/index.html" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="single-team">
-            <img src="img/mockups/rpg.png" alt="RPG Game">
-            <div class="team-text">
-              <h2>RPG Game</h2>
-              <p>Little Red Ridding Hood</p>
-              <div class="summary-stack">
-                <ul class="item1">
-                  <li>JavaScript</li>
-                  <li>ES6</li>
-                  <li>Phaser 3</li>
-                  <li>Webpack 4</li>
-                </ul>
-                <p class="item2">
-                  <a href="https://github.com/ricardovaltierra/rpg-game" target = "_blank"><i class="fab fa-github fa-lg"></i></a>
-                  <a href="https://little-red-ridding-hood.netlify.app/" target = "_blank"><i class="fab fa-chrome fa-lg"></i></a>          
                 </p>
               </div>
             </div>
